test/files/run/invalid-lubs.check

scala> def foo(a: Boolean, b: List[Any], c: collection.mutable.ListBuffer[Any]) = if (a) b else c
           ^
       error: kinds of the type arguments (Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Seq[Any] with Serializable] with Serializable] with Serializable) do not conform to the expected kinds of the type parameters (type A,type CC,type C) in trait StrictOptimizedSeqOps.
       Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable] with Serializable's type parameters do not match type CC's expected parameters:
       <refinement of Int => A with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable]> has no type parameters, but type CC has one

scala> List(List[Any](), collection.mutable.ListBuffer[Any]())
                     ^
       error: type mismatch;
        found   : List[Any]
        required: Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Seq[Any] with Serializable] with Serializable] with Serializable] with Serializable
                                                           ^
       error: type mismatch;
        found   : scala.collection.mutable.ListBuffer[Any]
        required: Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Seq[Any] with Serializable] with Serializable] with Serializable] with Serializable

scala> List(List(), collection.mutable.ListBuffer())
                ^
       error: type mismatch;
        found   : List[Nothing]
        required: Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable] with Serializable,Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with Serializable,Seq[Nothing] with Serializable] with Serializable] with Serializable] with Serializable
                                                 ^
       error: type mismatch;
        found   : scala.collection.mutable.ListBuffer[Nothing]
        required: Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable] with Serializable,Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with Serializable,Seq[Nothing] with Serializable] with Serializable] with Serializable] with Serializable

scala> List(List(), Vector())
                ^
       error: type mismatch;
        found   : List[Nothing]
        required: scala.collection.immutable.Seq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.Seq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.Seq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.Seq with Serializable,Serializable with Equals] with Serializable,scala.collection.immutable.Seq[Any] with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.Seq with Serializable,Serializable with Equals] with Serializable] with Serializable,scala.collection.immutable.Seq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.Seq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.Seq with Serializable,Serializable with Equals] with Serializable,scala.collection.immutable.Seq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.Seq with Serializable,scala.collection.immutable.Seq[Nothing] with Serializable] with Serializable] with Serializable] with Serializable
                          ^
       error: type mismatch;
        found   : scala.collection.immutable.Vector[Nothing]
        required: scala.collection.immutable.Seq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.Seq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.Seq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.Seq with Serializable,Serializable with Equals] with Serializable,scala.collection.immutable.Seq[Any] with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.Seq with Serializable,Serializable with Equals] with Serializable] with Serializable,scala.collection.immutable.Seq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.Seq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.Seq with Serializable,Serializable with Equals] with Serializable,scala.collection.immutable.Seq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.Seq with Serializable,scala.collection.immutable.Seq[Nothing] with Serializable] with Serializable] with Serializable] with Serializable

scala> List(collection.mutable.Queue(), List())
                                    ^
       error: type mismatch;
        found   : scala.collection.mutable.Queue[Nothing]
        required: Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable] with Serializable,Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with Serializable,Seq[Nothing] with Serializable] with Serializable] with Serializable] with Serializable
                                            ^
       error: type mismatch;
        found   : List[Nothing]
        required: Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Any] with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable] with Serializable,Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with scala.collection.StrictOptimizedSeqOps[Any,Seq with Serializable,Serializable with Equals] with Serializable,Seq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,Seq with Serializable,Seq[Nothing] with Serializable] with Serializable] with Serializable] with Serializable

scala> :quit
